finished the block mainProduct

--- a/index.html
+++ b/index.html
@@ -57,8 +57,13 @@
       </header>
       <main>
         <div class="mainProduct center">
-          <h2 class="mainProduct__text-h2">РАБОТАЙТЕ ПРОДУКТИВНЕЕ</h2>
+          <h2 class="text-h2 mainProduct__text-h2">РАБОТАЙТЕ ПРОДУКТИВНЕЕ</h2>
           <img class="mainProduct__img" src="./img/main/mainProduct/mainProduct.png" alt="main product" />
+          <p class="text-p mainProduct__text-p">Создана для эффективной работы, программирования и творчества</p>
+          <svg class="mainProduct__arrow" width="61" height="33" viewBox="0 0 61 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M2 2L30.5 31L59 2" stroke="#FF2947" stroke-width="3" stroke-linejoin="round"/>
+            </svg>
+            
         </div>
       </main>
       <footer></footer>
